--- a/webserv.conf
+++ b/webserv.conf
@@ -2,6 +2,7 @@
 
 server:
 	# defaults to port 127.0.0.1:8080
+	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
 	location:
 		methods: GET POST PUT DELETE PATCH
@@ -10,9 +11,9 @@ server:
 		root: www
 		index: index.html
 		listing: true
-	error_pages:
-		404: /404.html
-		500: /500.html
+	# error_pages:
+	# 	404: /404.html
+	# 	500: /500.html
 
 server:
 	listen: 127.0.0.1:8090
@@ -24,12 +25,11 @@ server:
 		root: www
 		index: index.html
 		listing: true
-
-	error_pages:
-		404: /404.html
-		500: /500.html
+	# error_pages:
+	# 	404: /404.html
+	# 	500: /500.html
 
 # default error pages
-error_pages:
+default_error_pages:
 	404: /www/404.html
 	500: /www/500.html
