config: sanity checking + dump_config

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,19 +1,19 @@
 # this is a comment
 
 server:
-	# defaults to port 127.0.0.1:8080
+	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
 	location:
+		# defaults to *
 		methods: GET POST PUT DELETE PATCH
 		rewrite: /home /home.html
 		cgi: php 127.0.0.1:8010
 		root: www
 		index: index.html
-		listing: true
-	# error_pages:
-	# 	404: /404.html
-	# 	500: /500.html
+	error_pages:
+		404: /404.html
+		500: /500.html
 
 server:
 	listen: 127.0.0.1:8090
@@ -25,10 +25,9 @@ server:
 		root: www
 		index: index.html
 		listing: true
-	# error_pages:
-	# 	404: /404.html
-	# 	500: /500.html
 
+
+server:
 # default error pages
 default_error_pages:
 	404: /www/404.html
