config: add root to server level

--- a/webserv.conf
+++ b/webserv.conf
@@ -4,12 +4,13 @@ server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
+	root: www
 	location:
 		# defaults to *
 		methods: GET POST PUT DELETE PATCH
 		rewrite: /home /home.html
 		cgi: php 127.0.0.1:8010
-		root: www
+		dir: www
 		index: index.html
 	error_pages:
 		404: /404.html
@@ -17,12 +18,14 @@ server:
 
 server:
 	listen: 127.0.0.1:8090
+	root: www
+
 	location:
 		# asterisk means all methods: GET POST PUT DELETE PATCH
 		methods: *
 		rewrite: /a /b
 		rewrite: /b /c
-		root: www
+		dir: www
 		index: index.html
 		listing: true
 
