--- a/webserv.conf
+++ b/webserv.conf
@@ -10,7 +10,7 @@ server:
 		methods: GET POST PUT DELETE PATCH
 		rewrite: /home /home.html
 		cgi: php 127.0.0.1:8010
-		dir: www
+		dir: /www
 		index: index.html
 	error_pages:
 		404: /404.html
