--- a/webserv.conf
+++ b/webserv.conf
@@ -20,15 +20,24 @@ server:
 	listen: 127.0.0.1:8090
 	root: www
 
-	location:
+	location /files:
 		# asterisk means all methods: GET POST PUT DELETE PATCH
 		methods: *
 		rewrite: /a /b
 		rewrite: /b /c
-		target: /files
 		dir: www
 		index: index.html
-		listing: true
+		autoindex: true
+
+	location /src:
+		# asterisk means all methods: GET POST PUT DELETE PATCH
+		methods: *
+		rewrite: /a /b
+		rewrite: /b /c
+		dir: www
+		index: index.html
+		autoindex: true
+		return: 301 http://magiesimonroy.ca/
 
 
 server:
