--- a/webserv.conf
+++ b/webserv.conf
@@ -4,14 +4,15 @@ server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
-	root: /Users/kadjane/Desktop/web_serv2/
+	root: /Users/kadjane/Desktop/web_serv2/srcs
+
 	location /:
 		# defaults to *
 		methods: GET POST PUT DELETE PATCH
-		rewrite: /home /home.html
+		rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
-		dir: /Users/kadjane/Desktop/web_serv2/srcs/
-		# autoindex: true
+		dir: /Users/kadjane/Desktop/web_serv2/srcs
+		autoindex: true
 		# index: video.mp4
 	error_pages:
 		404: /404.html
@@ -20,11 +21,14 @@ server:
 	location /srcs:
 		# defaults to *
 		methods: GET POST PUT DELETE PATCH
-		rewrite: /home /home.html
+		rewrite: index index.html
+		rewrite: video video.mp4
 		# cgi: php 127.0.0.1:8010
 		dir: /Users/kadjane/Desktop/web_serv2/srcs
 		autoindex: true
-		index: video.mp4
+		# index: video.mp4
+		# return: 302 /Users/kadjane/Desktop/web_serv2/srcs/index.html
+		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
 	error_pages:
 		404: /404.html
 		500: /500.html
@@ -50,7 +54,6 @@ server:
 		dir: www
 		index: index.html
 		autoindex: true
-		return: 301 http://magiesimonroy.ca/
 
 
 server:
