--- a/webserv.conf
+++ b/webserv.conf
@@ -9,9 +9,9 @@ server:
 	location /:
 		# defaults to *
 		methods: GET POST PUT DELETE PATCH
-		rewrite: / /srcs
+		# rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
-		dir: /Users/kadjane/Desktop/web_serv2/srcs
+		dir: /Users/kadjane/Desktop/web_serv2
 		autoindex: true
 		# index: video.mp4
 	error_pages:
@@ -24,7 +24,7 @@ server:
 		rewrite: index index.html
 		rewrite: video video.mp4
 		# cgi: php 127.0.0.1:8010
-		dir: /Users/kadjane/Desktop/web_serv2/srcs
+		dir: /Users/kadjane/Desktop/web_serv2
 		autoindex: true
 		# index: video.mp4
 		# return: 302 /Users/kadjane/Desktop/web_serv2/srcs/index.html
@@ -34,7 +34,7 @@ server:
 		500: /500.html
 
 server:
-	listen: 127.0.0.1:8090
+		listen: 127.0.0.1:8090
 	root: www
 
 	location /files:
