--- a/webserv.conf
+++ b/webserv.conf
@@ -4,14 +4,14 @@ server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
-	root: /Users/ntaleb/Desktop/webserv
+	root: /tmp
 
-	location /:
+	location /file:
 		# defaults to *
 		methods: GET POST PUT DELETE PATCH
 		# rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
-		dir: /Users/ntaleb/Desktop/webserv
+		dir: /tmp
 		autoindex: true
 		# index: video.mp4
 	error_pages:
