--- a/webserv.conf
+++ b/webserv.conf
@@ -5,6 +5,7 @@ server:
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
 	root: /tmp
+	client_max_body_size: 1m
 
 	location /:
 		# defaults to *
