config: check if location.dir is accessible

--- a/webserv.conf
+++ b/webserv.conf
@@ -9,7 +9,7 @@ server:
 
 	location /:
 		# defaults to *
-		methods: GET POST PUT DELETE PATCH
+		methods: GET POST DELETE
 		# rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
 		dir: /tmp
@@ -21,7 +21,7 @@ server:
 
 	location /srcs:
 		# defaults to *
-		methods: GET POST PUT DELETE PATCH
+		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video video.mp4
 		# cgi: php 127.0.0.1:8010
