fix compiler warns and errors

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,5 +1,5 @@
 # this is a comment
-client_max_body_size: 1m
+client_max_body_size: 2m
 
 server:
 	# defaults to port 0.0.0.0:0000
@@ -25,7 +25,7 @@ server:
 		rewrite: index index.html
 		rewrite: video video.mp4
 		# cgi: php 127.0.0.1:8010
-		dir: /Users/kadjane/Desktop/web_serv2
+		dir: /tmp
 		autoindex: true
 		# index: video.mp4
 		# return: 302 /Users/kadjane/Desktop/web_serv2/srcs/index.html
