config: add upload to location

--- a/webserv.conf
+++ b/webserv.conf
@@ -14,6 +14,7 @@ server:
 		# cgi: php 127.0.0.1:8010
 		dir: /tmp
 		autoindex: true
+		upload: true
 		# index: video.mp4
 	error_pages:
 		404: /404.html
