--- a/webserv.conf
+++ b/webserv.conf
@@ -7,6 +7,18 @@ server:
 	server_names: localhost www.localhost.dev
 	root: /tmp
 
+	location /:
+		# defaults to *
+		methods: GET POST PUT DELETE PATCH
+		# rewrite: / /srcs
+		# cgi: php 127.0.0.1:8010
+		dir: /Users/kadjane/Desktop/web_serv2/
+		autoindex: true
+		# index: video.mp4
+	error_pages:
+		404: /404.html
+		500: /500.html
+
 	location /file:
 		# defaults to *
 		methods: GET POST DELETE
@@ -26,7 +38,7 @@ server:
 		rewrite: index index.html
 		rewrite: video video.mp4
 		# cgi: php 127.0.0.1:8010
-		dir: /tmp
+		dir: srcs
 		autoindex: true
 		# index: video.mp4
 		# return: 302 /Users/kadjane/Desktop/web_serv2/srcs/index.html
