handel CGI with get

--- a/webserv.conf
+++ b/webserv.conf
@@ -5,18 +5,19 @@ server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
-	root: /tmp
+	root: /Users/kadjane/Desktop/server_3
 
 	location /:
 		# defaults to *
-		methods: GET POST PUT DELETE PATCH
+		methods: GET POST DELETE
+		# dir: /
+		dir: /Users/kadjane/Desktop/server_1copy/
 		# rewrite: / /srcs
-		# cgi: php 127.0.0.1:8010
-		dir: /Users/kadjane/Desktop/web_serv2/
+		cgi: php response/cgi-bin/php-cgi
 		autoindex: true
 		# index: video.mp4
 	error_pages:
-		404: /404.html
+		404: /404.html    0.0.0.0:8080/srcs/index.html
 		500: /500.html
 
 	location /file:
@@ -32,16 +33,18 @@ server:
 		404: /404.html
 		500: /500.html
 
-	location /srcs:
+	location /fil:
 		# defaults to *
 		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video video.mp4
-		# cgi: php 127.0.0.1:8010
 		dir: srcs
 		autoindex: true
-		# index: video.mp4
-		# return: 302 /Users/kadjane/Desktop/web_serv2/srcs/index.html
+		cgi: php response/cgi-bin/php-cgi
+		index: khotata.png
+		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
+		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
+		# return: 302 https://meta.intra.42.fr/clusters
 		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
 	error_pages:
 		404: /404.html
