--- a/webserv.conf
+++ b/webserv.conf
@@ -5,13 +5,13 @@ server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
 	server_names: localhost www.localhost.dev
-	root: /Users/kadjane/Desktop/server_3
+	root: /tmp
 
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: /Users/kadjane/Desktop/server_1copy/
+		dir: /tmp
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		autoindex: true
@@ -41,7 +41,6 @@ server:
 		dir: srcs
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
-		index: khotata.png
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
 		# return: 302 https://meta.intra.42.fr/clusters
