handel multiple CGi

--- a/webserv.conf
+++ b/webserv.conf
@@ -11,11 +11,12 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: /Users/kadjane/Desktop/server_1copy/
+		dir: /Users/kadjane/Desktop/server_2/
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
 		autoindex: true
-		# index: video.mp4
+		index: test_post.php
 	error_pages:
 		404: /404.html    0.0.0.0:8080/srcs/index.html
 		500: /500.html
@@ -25,7 +26,7 @@ server:
 		methods: GET POST DELETE
 		# rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
-		dir: /tmp
+		dir: srcs
 		autoindex: true
 		upload: true
 		# index: video.mp4
@@ -41,7 +42,8 @@ server:
 		dir: srcs
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
-		index: khotata.png
+		# index: index.html
+		upload: false
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
 		# return: 302 https://meta.intra.42.fr/clusters
