define assert & stricter config checking

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,5 +1,6 @@
 # this is a comment
-client_max_body_size: 2m
+# default to 1m
+client_max_body_size: 1m 
 
 server:
 	# defaults to port 0.0.0.0:0000
@@ -17,7 +18,7 @@ server:
 		autoindex: true
 		# index: video.mp4
 	error_pages:
-		404: /404.html    0.0.0.0:8080/srcs/index.html
+		404: /404.html
 		500: /500.html
 
 	location /file:
@@ -29,10 +30,6 @@ server:
 		autoindex: true
 		upload: true
 		# index: video.mp4
-	error_pages:
-		404: /404.html
-		500: /500.html
-
 	location /fil:
 		# defaults to *
 		methods: GET POST DELETE
@@ -45,10 +42,6 @@ server:
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
 		# return: 302 https://meta.intra.42.fr/clusters
 		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
-	error_pages:
-		404: /404.html
-		500: /500.html
-
 server:
 		listen: 127.0.0.1:8090
 	root: www
@@ -70,6 +63,9 @@ server:
 		dir: www
 		index: index.html
 		autoindex: true
+	error_pages:
+		404: /404.html
+		500: /500.html
 
 
 server:
