set close_connexion on send failure

--- a/webserv.conf
+++ b/webserv.conf
@@ -12,7 +12,7 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: /Users/kadjane/Desktop/server_push/
+		dir: /tmp
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
