--- a/webserv.conf
+++ b/webserv.conf
@@ -40,7 +40,7 @@ server:
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		# index: index.html
-		upload: false
+		upload: true
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
 		# return: 302 https://meta.intra.42.fr/clusters
