--- a/webserv.conf
+++ b/webserv.conf
@@ -12,7 +12,7 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: response/cgi-bin/cgi_post_test
+		dir: /Users/kadjane/Desktop/
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
