more sanity checking for the config

--- a/webserv.conf
+++ b/webserv.conf
@@ -19,8 +19,8 @@ server:
 		autoindex: true
 		index: test_post.php
 	error_pages:
-		404: /404.html
-		500: /500.html
+		404: www/404.html
+		500: www/500.html
 
 	location /file:
 		# defaults to *
@@ -67,12 +67,12 @@ server:
 		index: index.html
 		autoindex: true
 	error_pages:
-		404: /404.html
-		500: /500.html
+		404: www/404.html
+		500: www/500.html
 
 
 server:
 # default error pages
 default_error_pages:
-	404: /www/404.html
-	500: /www/500.html
+	404: www/404.html
+	500: www/500.html
