update read file

--- a/webserv.conf
+++ b/webserv.conf
@@ -12,7 +12,7 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: ..
+		dir: /Users/kadjane/Desktop/server_push
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
@@ -39,7 +39,7 @@ server:
 		dir: srcs
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
-		# index: index.html
+		index: test_post.py
 		upload: true
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
