handel some error in path

--- a/webserv.conf
+++ b/webserv.conf
@@ -36,7 +36,7 @@ server:
 		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video video.mp4
-		dir: /Users/kadjane/Desktop/server_push
+		dir: srcs
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		index: test_post.py
