handel matchin error

--- a/webserv.conf
+++ b/webserv.conf
@@ -12,7 +12,7 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: /Users/kadjane/Desktop/server_push
+		dir: /
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
@@ -27,7 +27,7 @@ server:
 		methods: GET POST DELETE
 		# rewrite: / /srcs
 		# cgi: php 127.0.0.1:8010
-		dir: srcs
+		dir: srcs/
 		autoindex: true
 		upload: true
 		# index: video.mp4
@@ -35,14 +35,15 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		rewrite: index index.html
-		rewrite: video video.mp4
-		dir: srcs
+		rewrite: video1 video1.mp4
+		dir: /Users/kadjane/Desktop/server_push
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
-		index: test_post.py
+		# index: video.mp4
 		upload: true
-		# return: 302 /Users/kadjane/Desktop/server_3/srcs/book.pdf
+		# return: 404 /Users/kadjane/Desktop/server_push/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
+		# return: 404 https://www.youtube.com/watch?v=DO2TqxU0gJo
 		# return: 302 https://meta.intra.42.fr/clusters
 		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
 server:
