detecte loop infinit

--- a/webserv.conf
+++ b/webserv.conf
@@ -39,6 +39,7 @@ server:
 		dir: /Users/kadjane/Desktop/server_push
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
 		# index: video.mp4
 		upload: true
 		# return: 404 /Users/kadjane/Desktop/server_push/srcs/book.pdf
