detecte loop infinit

--- a/webserv.conf
+++ b/webserv.conf
@@ -36,12 +36,12 @@ server:
 		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video1 video1.mp4
-		dir: /Users/kadjane/Desktop/server_push
+		dir: /Users/kadjane/Desktop/server_push_2
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		# index: video.mp4
-		upload: true
+		# upload: true
 		# return: 404 /Users/kadjane/Desktop/server_push/srcs/book.pdf
 		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
 		# return: 404 https://www.youtube.com/watch?v=DO2TqxU0gJo
