--- a/webserv.conf
+++ b/webserv.conf
@@ -36,7 +36,7 @@ server:
 		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video1 video1.mp4
-		dir: /Users/kadjane/Desktop/server_push_2
+		dir: /
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
