--- a/webserv.conf
+++ b/webserv.conf
@@ -1,11 +1,11 @@
 # this is a comment
 # default to 1m
-client_max_body_size: 1m 
+client_max_body_size: 14m 
 
 server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
-	server_names: localhost www.localhost.dev
+	server_names: current.dev
 	root: /tmp
 
 	location /:
@@ -20,6 +20,20 @@ server:
 		index: test_post.php
 	error_pages:
 		404: www/404.html
+		405: www/508.html
+		500: www/500.html
+
+	location /www:
+		# defaults to *
+		methods: GET POST DELETE
+		# dir: /
+		dir: www
+		index: index.html
+		# rewrite: / /srcs
+		autoindex: true
+	error_pages:
+		404: www/404.html
+		405: www/508.html
 		500: www/500.html
 
 	location /file:
@@ -48,10 +62,21 @@ server:
 		# return: 302 https://meta.intra.42.fr/clusters
 		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
 server:
-		listen: 127.0.0.1:8090
+	listen: 0.0.0.0:8080
+	server_names: desktop.dev
 	root: www
 
-	location /files:
+	location /:
+		# defaults to *
+		methods: GET POST DELETE
+		rewrite: index index.html
+		rewrite: video1 video1.mp4
+		dir: ..
+		autoindex: true
+		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
+
+	location /src:
 		# asterisk means all methods: GET POST PUT DELETE PATCH
 		methods: *
 		rewrite: /a /b
