--- a/webserv.conf
+++ b/webserv.conf
@@ -11,92 +11,78 @@ server:
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
-		# dir: /
-		dir: /
-		# rewrite: / /srcs
+		dir: .
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		autoindex: true
 		index: test_post.php
 	error_pages:
 		404: www/404.html
-		405: www/508.html
 		500: www/500.html
 
-	location /www:
+	location /srcs:
 		# defaults to *
 		methods: GET POST DELETE
-		# dir: /
-		dir: www
+		dir: srcs
 		index: index.html
-		# rewrite: / /srcs
 		autoindex: true
 	error_pages:
 		404: www/404.html
-		405: www/508.html
 		500: www/500.html
 
-	location /file:
-		# defaults to *
-		methods: GET POST DELETE
-		# rewrite: / /srcs
-		# cgi: php 127.0.0.1:8010
-		dir: srcs/
-		autoindex: true
-		upload: true
-		# index: video.mp4
-	location /fil:
-		# defaults to *
-		methods: GET POST DELETE
-		rewrite: index index.html
-		rewrite: video1 video1.mp4
-		dir: /
-		autoindex: true
-		cgi: php response/cgi-bin/php-cgi
-		cgi: py /usr/bin/python
-		# index: video.mp4
-		# upload: true
-		# return: 404 /Users/kadjane/Desktop/server_push/srcs/book.pdf
-		# return: 302 /Users/kadjane/Desktop/server_3/srcs/styles.css
-		# return: 404 https://www.youtube.com/watch?v=DO2TqxU0gJo
-		# return: 302 https://meta.intra.42.fr/clusters
-		# return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
+
+
 server:
-	listen: 0.0.0.0:8080
+	listen: 0.0.0.0:8090
 	server_names: desktop.dev
 	root: www
 
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
+		dir: ..
+		autoindex: true
+		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
+	
+	location /fil:
+		# defaults to *
+		methods: GET POST DELETE
+		rewrite: index index.html
+		dir: /
+		autoindex: true
+		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
+		# upload: true
+		return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
+
+
+server:
+	listen: 0.0.0.0:8090
+	server_names: localhost 
+	root: www
+
+	location /fil:
+		# defaults to *
+		methods: GET POST DELETE
 		rewrite: index index.html
 		rewrite: video1 video1.mp4
-		dir: ..
+		dir: .
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 
 	location /src:
 		# asterisk means all methods: GET POST PUT DELETE PATCH
-		methods: *
-		rewrite: /a /b
-		rewrite: /b /c
-		dir: www
-		index: index.html
-		autoindex: true
-
-	location /src:
-		# asterisk means all methods: GET POST PUT DELETE PATCH
-		methods: *
-		rewrite: /a /b
-		rewrite: /b /c
-		dir: www
+				# defaults to *
+		methods: GET POST DELETE
+		dir: response/cgi-bin
 		index: index.html
 		autoindex: true
 	error_pages:
 		404: www/404.html
 		500: www/500.html
-
+	
 
 server:
 # default error pages
