strictly use the fd from watchlist

--- a/webserv.conf
+++ b/webserv.conf
@@ -11,7 +11,9 @@ server:
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
-		dir: .
+		# dir: /
+		dir: srcs
+		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		autoindex: true
@@ -69,6 +71,7 @@ server:
 		rewrite: video1 video1.mp4
 		dir: .
 		autoindex: true
+		upload: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 
@@ -83,7 +86,6 @@ server:
 		404: www/404.html
 		500: www/500.html
 	
-
 server:
 # default error pages
 default_error_pages:
