handel post with empty content

--- a/webserv.conf
+++ b/webserv.conf
@@ -12,12 +12,12 @@ server:
 		# defaults to *
 		methods: GET POST DELETE
 		# dir: /
-		dir: srcs
+		dir: .
 		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		autoindex: true
-		index: test_post.php
+		# upload: true
 	error_pages:
 		404: www/404.html
 		500: www/500.html
