--- a/webserv.conf
+++ b/webserv.conf
@@ -1,23 +1,31 @@
 # this is a comment
 # default to 1m
-client_max_body_size: 14m 
+client_max_body_size: 14m
 
 server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
-	server_names: current.dev
+	server_names: desktop.dev
 	root: /tmp
 
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
-		# dir: /
+		autoindex: true
+
+server:
+	# defaults to port 0.0.0.0:0000
+	listen: 0.0.0.0:8080
+	server_names: localhost
+	root: /tmp
+
+	location /:
+		# defaults to *
+		methods: GET POST DELETE
 		dir: .
-		# rewrite: / /srcs
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		autoindex: true
-		# upload: true
 	error_pages:
 		404: www/404.html
 		500: www/500.html
@@ -27,11 +35,48 @@ server:
 		methods: GET POST DELETE
 		dir: srcs
 		index: index.html
-		autoindex: true
+		upload: true
 	error_pages:
 		404: www/404.html
 		500: www/500.html
 
+	location /file:
+		# defaults to *
+		methods: GET POST DELETE
+		dir: srcs
+		index: index.html
+		upload: true
+		return: 302 https://www.youtube.com/watch?v=14SzfLg37Uk
+	error_pages:
+		404: www/404.html
+		500: www/500.html
+
+
+server:
+	listen: 0.0.0.0:8090
+	server_names: localhost 
+	root: www
+
+	location /fil:
+		# defaults to *
+		methods: GET POST DELETE
+		dir: .
+		autoindex: true
+		upload: true
+		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
+
+	location /src:
+		# asterisk means all methods: GET POST PUT DELETE PATCH
+				# defaults to *
+		methods: GET POST DELETE
+		dir: response/cgi-bin
+		index: index.html
+		autoindex: true
+		return: 302 http://localhost:8080/srcs/book.pdf
+	error_pages:
+		404: www/404.html
+		500: www/500.html
 
 
 server:
@@ -50,42 +95,13 @@ server:
 	location /fil:
 		# defaults to *
 		methods: GET POST DELETE
-		rewrite: index index.html
 		dir: /
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		# upload: true
-		return: 302 https://www.youtube.com/watch?v=2h04Nu7rgJI6
 
 
-server:
-	listen: 0.0.0.0:8090
-	server_names: localhost 
-	root: www
-
-	location /fil:
-		# defaults to *
-		methods: GET POST DELETE
-		rewrite: index index.html
-		rewrite: video1 video1.mp4
-		dir: .
-		autoindex: true
-		upload: true
-		cgi: php response/cgi-bin/php-cgi
-		cgi: py /usr/bin/python
-
-	location /src:
-		# asterisk means all methods: GET POST PUT DELETE PATCH
-				# defaults to *
-		methods: GET POST DELETE
-		dir: response/cgi-bin
-		index: index.html
-		autoindex: true
-	error_pages:
-		404: www/404.html
-		500: www/500.html
-	
 server:
 # default error pages
 default_error_pages:
