fix config remove useless comments

--- a/webserv.conf
+++ b/webserv.conf
@@ -4,19 +4,20 @@ client_max_body_size: 14m
 
 server:
 	# defaults to port 0.0.0.0:0000
-	listen: 0.0.0.0:8080
+	listen: 0.0.0.0:8070
 	server_names: desktop.dev
-	root: /tmp
 
 	location /:
 		# defaults to *
 		methods: GET POST DELETE
+		dir: /tmp
 		autoindex: true
+		upload: true
 
 server:
 	# defaults to port 0.0.0.0:0000
 	listen: 0.0.0.0:8080
-	server_names: localhost
+	server_names: current.dev
 	root: /tmp
 
 	location /:
@@ -26,58 +27,42 @@ server:
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
 		autoindex: true
-	error_pages:
-		404: www/404.html
-		500: www/500.html
-
-	location /srcs:
-		# defaults to *
-		methods: GET POST DELETE
-		dir: srcs
-		index: index.html
 		upload: true
 	error_pages:
 		404: www/404.html
 		500: www/500.html
 
-	location /file:
+	location /files:
 		# defaults to *
 		methods: GET POST DELETE
 		dir: srcs
-		index: index.html
-		upload: true
+		cgi: php response/cgi-bin/php-cgi
+		cgi: py /usr/bin/python
+	error_pages:
+		404: www/404.html
+		500: www/500.html
+
+	location /redirect:
+		# defaults to *
+		methods: GET POST DELETE
+		# upload: true
 		return: 302 https://www.youtube.com/watch?v=14SzfLg37Uk
 	error_pages:
 		404: www/404.html
 		500: www/500.html
 
-
 server:
-	listen: 0.0.0.0:8090
-	server_names: localhost 
-	root: www
+	listen: 0.0.0.0:8080
+	server_names: desktop.dev 
+	root: ..
 
-	location /fil:
+	location /:
 		# defaults to *
 		methods: GET POST DELETE
-		dir: .
 		autoindex: true
 		upload: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
-
-	location /src:
-		# asterisk means all methods: GET POST PUT DELETE PATCH
-				# defaults to *
-		methods: GET POST DELETE
-		dir: response/cgi-bin
-		index: index.html
-		autoindex: true
-		return: 302 http://localhost:8080/srcs/book.pdf
-	error_pages:
-		404: www/404.html
-		500: www/500.html
-
 
 server:
 	listen: 0.0.0.0:8090
@@ -91,18 +76,7 @@ server:
 		autoindex: true
 		cgi: php response/cgi-bin/php-cgi
 		cgi: py /usr/bin/python
-	
-	location /fil:
-		# defaults to *
-		methods: GET POST DELETE
-		dir: /
-		autoindex: true
-		cgi: php response/cgi-bin/php-cgi
-		cgi: py /usr/bin/python
-		# upload: true
 
-
-server:
 # default error pages
 default_error_pages:
 	404: www/404.html
